feat: rolagem teste

--- a/Styles/questoes.css
+++ b/Styles/questoes.css
@@ -8,6 +8,7 @@ body {
     align-items: center;
     overflow: hidden;
     background: linear-gradient(135deg, #0cc0df, #ffde59); 
+    overflow: hidden;
 }
 
 h1 {
