--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -1,15 +1,16 @@
 body {
     margin: 0;
     padding: 0;
-    height: 100vh;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     background-image: url('../Icons/3.png');
-    background-repeat: no-repeat;
+    background-size: cover;
+    background-repeat: no-repeat; 
     background-attachment: fixed;
-    overflow: hidden;
+    overflow-x: hidden; 
 }
 
 
@@ -64,7 +65,7 @@ body {
 }
 
 h1 {
-    margin-top: 1%;
+    margin-top: 70%;
     font-size: 1.7vw;
     color: #FFF;
     font-family: "Press Start 2P", system-ui;
