--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -1,7 +1,8 @@
 body {
     margin: 0;
     padding: 0;
-    height: 100%;
+    height: auto;
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -9,7 +10,7 @@ body {
     background-image: url('../Icons/3.png');
     background-size: cover;
     background-repeat: no-repeat; 
-    background-attachment: fixed;
+    background-attachment: scroll;
     overflow-x: hidden; 
 }
 
@@ -65,7 +66,6 @@ body {
 }
 
 h1 {
-    margin-top: 70%;
     font-size: 1.7vw;
     color: #FFF;
     font-family: "Press Start 2P", system-ui;
