--- a/Styles/6-meses.css
+++ b/Styles/6-meses.css
@@ -4,9 +4,9 @@ body {
     height: 100vh;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
-    background-image: url('../Icons/13.png');
+    background-image: url('../Icons/banner-2.jpg');
     background-repeat: no-repeat;
     background-attachment: fixed;
     overflow: hidden;
@@ -20,14 +20,10 @@ body {
     justify-content: center;
     align-items: center;
 }
-
 .icon-container {
     display: flex;
     justify-content: center;
     gap: 15px;
-    position: absolute;
-    top: 15%;
-    z-index: 2;
 }
 
 .icon-coracao, .icon-velha, .icon-velho {
@@ -70,12 +66,11 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    position: relative; 
-    top: -55px; 
+    margin-top: 25%; 
 }
 
 h1 {
-    margin-top: 1%;
+    margin-top: 5%;
     font-size: 1.7vw;
     color: #FFF;
     font-family: "Press Start 2P", system-ui;
@@ -98,7 +93,7 @@ p {
 .content-button {
     display: flex;
     justify-content: center; 
-    margin-top: 20px; 
+    margin-top: 15px; 
 }
 
 .button-container {
@@ -128,11 +123,12 @@ p {
     }
 
     .content {
-        margin-top: 1%;
+        margin-top: 7%;
         width: 80%;
     }
 
     h1 {
+        margin-top: 7%;
         font-size: 23px;
         line-height: 1.5;
     }
@@ -143,7 +139,6 @@ p {
     }
 
     .icon-container {
-        top: 10%;
         gap: 15px;
     }
 
