--- a/Styles/acerto.css
+++ b/Styles/acerto.css
@@ -4,7 +4,7 @@ body {
     height: 100vh;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
     overflow: hidden;
     background: linear-gradient(135deg, #0cc0df, #ffde59);
@@ -18,7 +18,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 5%;
+    margin-top: 15%;
     background-size: cover;
 }
 
@@ -80,7 +80,7 @@ p {
 .button {
     display: inline-block;
     text-decoration: none;
-    margin-top: 40%;
+    margin-top: 30%;
     width: 70%;
     text-align: center;
     padding: 15px;
