--- a/Styles/erro.css
+++ b/Styles/erro.css
@@ -4,7 +4,7 @@ body {
     height: 100vh;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
     overflow: hidden;
     background: linear-gradient(135deg, #0cc0df, #ffde59);
@@ -18,7 +18,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 5%;
+    margin-top: 15%;
     background-size: cover;
 }
 
