--- a/Styles/quiz-inicio.css
+++ b/Styles/quiz-inicio.css
@@ -4,7 +4,7 @@ body {
     height: 100vh;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
     overflow: hidden;
     background: linear-gradient(135deg, #0cc0df, #ffde59);
@@ -18,11 +18,10 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 5%;
+    margin-top: 11%;
 }
 
 h1 {
-    margin-top: 1%;
     font-size: 1.7vw;
     font-family: "Press Start 2P", system-ui;
     font-weight: 800;
