--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -1,17 +1,15 @@
 body {
     margin: 0;
     padding: 0;
-    height: auto; 
-    min-height: 100%; 
+    height: 100vh;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start; 
+    justify-content: start;
     align-items: center;
-    background-image: url('../Icons/3.png');
-    background-size: cover;
-    background-position: center; 
-    background-repeat: no-repeat; 
-    overflow-x: hidden;
+    background-image: url('../Icons/banner-1.jpg');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    overflow: hidden;
 }
 
 .top-content {
@@ -22,14 +20,10 @@ body {
     justify-content: center;
     align-items: center;
 }
-
 .icon-container {
     display: flex;
     justify-content: center;
     gap: 15px;
-    position: absolute;
-    top: 15%;
-    z-index: 2;
 }
 
 .icon {
@@ -61,7 +55,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 15%;
+    margin-top: 25%; 
 }
 
 h1 {
@@ -118,10 +112,12 @@ p {
 
     .content {
         width: 70%;
+        margin-top: 15%;
     }
 
     h1 {
         font-size: 20px;
+        margin-top: 15%;
         line-height: 1.5;
     }
 
@@ -131,12 +127,11 @@ p {
     }
 
     .icon-container {
-        top: 5%;
         gap: 15px;
     }
 
     .icon {
-        width: 30px;
+        width: 35px;
         height: 25px;
     }
 }
